# libuuid

./: CMakeLists.txt  all-io.h  c.h  gen_uuid.c  randutils.c
cmake/: HAVE_DECL__SC_HOST_NAME_MAX.c  HAVE_GETEXECNAME.c  HAVE_TLS.c
